# alglab08

./: CMakeLists.txt
src/: InvIndex.cpp  InvIndex.hpp  main.cpp
